changed leisure items response
