# adapter/input/jakarta-controller/src/main/java/com/felpeto/realestate/controller/dto/output/Availability.java
@@ -1,0 +1,6 @@
+package com.felpeto.realestate.controller.dto.output;
+
+public enum Availability {
+  AVAILABLE,
+  UNAVAILABLE
+}
