# adapter/input/jakarta-controller/src/main/java/com/felpeto/realestate/controller/dto/output/LeisureItemsResponseDto.java
@@ -1,0 +1,22 @@
+package com.felpeto.realestate.controller.dto.output;
+
+import java.util.Set;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+@Getter
+@Builder
+@ToString
+@EqualsAndHashCode
+@NoArgsConstructor
+@AllArgsConstructor
+public class LeisureItemsResponseDto {
+
+  private Availability availability;
+  private Set<String> items;
+
+}
